[package]
name = "rust"
version = "0.1.0"
edition = "2021"
description = "A sample rust project for WASM"
repository = ""
license = "whatever"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wasm-bindgen = "0.2.83"
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0.85"
serde-wasm-bindgen = "0.4.3"